# legged-kalman-filter

./: A1KF.hpp  A1KFCombineLO.cpp  A1KFCombineLO.h  A1KFCombineLOWithFoot.cpp  A1KFCombineLOWithFoot.h  A1KFCombineLOWithFootTerrain.cpp  A1KFCombineLOWithFootTerrain.h  A1KFFootIMU.cpp  A1KFFootIMU.h  A1KFQP.cpp  A1KFQP.h  A1KFSeparateLO.cpp  A1KFSeparateLO.h  CMakeLists.txt  KF_filter.cmake  README.md  filter.hpp  package.xml
casadi_lib/: compile_casadi.sh
casadi_lib/matlab_code_gen/: casadi_kf_baseline1_f.c  casadi_kf_baseline1_meas.c  casadi_kf_baseline1_meas_jac.c  casadi_kf_baseline1_process.c  casadi_kf_baseline1_process_jac.c  casadi_kf_baseline2_meas.c  casadi_kf_baseline2_meas_jac.c  casadi_kf_baseline2_process.c  casadi_kf_baseline2_process_jac.c  casadi_kf_baseline3_meas.c  casadi_kf_baseline3_meas_jac.c  casadi_kf_baseline3_process.c  casadi_kf_baseline3_process_jac.c  casadi_kf_baseline4_meas.c  casadi_kf_baseline4_meas_jac.c  casadi_kf_baseline4_process.c  casadi_kf_baseline4_process_jac.c
include/legged-kalman-filter/: AccessHelper.h  stateAccessHelper.h
mhe_utils/: Measurement.hpp  MeasurementQueue.hpp
test/: run_bag.cpp  test_casadi_lib.cpp  test_mhe.cpp  test_pinocchio_dynamics.cpp  test_pinocchio_unitree.cpp  test_rotations.cpp
